# cli

./: .gitignore  Cargo.toml  README.md  svg_rsx.rs
docs/src/: SUMMARY.md  configure.md  introduction.md
docs/src/cmd/: build.md  bundle.md  fmt.md  plugin.md
docs/src/plugin/: README.md
docs/src/plugin/interface/: dirs.md  fs.md  json.md  path.md
docs/src/plugin/iterface/: fs.md
extension/: package.json
extension/src/: extension.ts
rsx_parser/: Cargo.toml
rsx_parser/src/: ast.rs  attributes.rs  build_element.rs  elements.rs  interperter.rs  lexer.rs  lib.rs  parser.rs  rsx.lalrpop
src/: builder.rs  cargo.rs  config.rs  develop.rs  main.rs  tools.rs
src/assets/: dioxus.toml
src/cli/: cfg.rs  mod.rs
src/cli/autofmt/: mod.rs
src/cli/bundle/: mod.rs
src/cli/plugin/: mod.rs
src/cli/render_rsx/: mod.rs
src/cli/tool/: mod.rs
src/cli/translate/: mod.rs
src/plugin/: mod.rs  status.rs  types.rs
src/plugin/interface/: dirs.rs  fs.rs  log.rs  mod.rs  network.rs  path.rs
src/server/: mod.rs
